--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jalieven/pir-to-hue#readme",
   "dependencies": {
+    "node-hue-api": "^4.0.4",
     "onoff": "^5.0.1"
   }
 }
