--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-hue-api": "^4.0.4",
-    "onoff": "^5.0.1"
+    "onoff": "^5.0.1",
+    "set-interval-async": "^1.0.30"
   }
 }
